[package]
name = "d-web"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "`d_web` is a collection of utilities to make performing certain"
authors = ["Nikita"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
